# WhatsFuse

./: ARCHITECTURE_REVIEW.md  AUTOMATION_SYSTEM.md  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  START_HERE.md  UNIFIED_INTERFACE_UPDATE.md  api_spec.json  pyproject.toml
.cursor/rules/: project.md
docs/: CONTRIBUTING.md  DESIGN.md  FEATURE_MATRIX.md  PARAMETER_MAPPING.md  architecture.md  index.md
docs/development/: automation-system.md  getting-started.md  unified-interface-philosophy.md
docs/getting-started/: installation.md  quickstart.md
docs/providers/: green_api.md  waha.md
examples/: basic_usage.py
scripts/: README.md  generate_docs.py  validate_api.py
tests/: __init__.py  conftest.py
whatsfuse/: __init__.py  main.py
whatsfuse/core/: __init__.py  base_client.py  config.py  exceptions.py  types.py
whatsfuse/providers/: __init__.py
whatsfuse/providers/green_api/: __init__.py  client.py
whatsfuse/providers/waha/: __init__.py  client.py
whatsfuse/utils/: __init__.py
